--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
-    "test": "jest"
+    "test": "node -r ts-node/register ./node_modules/.bin/jest"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.1.0"
   }
